toevoeging logo's, sections kleuren om en om

--- a/Website/Basis Website [SBR Viewer]/index.html
+++ b/Website/Basis Website [SBR Viewer]/index.html
@@ -91,7 +91,7 @@
         </nav>
 
             
-        <section id="intro" class="section intro">
+        <section id="intro" class="section intro index">
             <div class="section-body">
                 <div class="content">
                     <div class="container">
@@ -128,12 +128,9 @@
                                 <p>
                                     ZeBra is een veelzijdige organisatie met een passie voor rugby. De stichting verzorgt trainingen en begeleiding op maat voor individuele spelers, rugbyverenigingen, onderwijsinstellingen en lokale overheden en richt zich naast de breedtesport ook speciaal op talentherkenning, talentontwikkeling en talentbegeleiding. Naast bijdragen aan het identificeren van talenten worden talenten voorbereid op doorstroom naar de programma's van regionale trainingen en/of nationale selecties van de NRB. 
                                 </p>
-                                <div class="collapse-group">
-                                    <p class="collapse">
-                                        De omvang, inhoud en kwaliteit van de programma’s bieden uitzicht op succes. ZeBra staat garant voor optimale technische, tactische, fysiek en mentale begeleiding. Wij realiseren een leer- omgeving waarbinnen het meest optimaal de potentie van de deelnemers kan worden ontwikkeld.
-                                    </p>
-                                    <a class="btn btn-default btn-collapse" href="#">Lees meer</a>
-                                </div>
+                                <p>
+                                    De omvang, inhoud en kwaliteit van de programma’s bieden uitzicht op succes. ZeBra staat garant voor optimale technische, tactische, fysiek en mentale begeleiding. Wij realiseren een leer- omgeving waarbinnen het meest optimaal de potentie van de deelnemers kan worden ontwikkeld.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -322,7 +319,90 @@
                         <div class="divider-grey"></div>
                     </div>
                     <div class="section-container">
+                        <div class="row col-md-offset-2">
+                            <div class="text-left col-md-3 col-xs-6">
+                                <a href="#" target="_blank">
+                                    <img src="img/logo/atr.jpg" width="200px" height="100px" alt="ATR">
+                                </a>
+                            </div>
+                            <div class="text-left col-md-3 col-xs-6">
+                                <a href="#" target="_blank">
+                                    <img src="img/logo/accessio.gif" width="200px" height="100px" alt="accessio">
+                                </a>
+                            </div>
+                            <div class="text-left col-md-3">
+                                <a href="#" target="_blank">
+                                    <img src="img/logo/accept.png" width="200px" height="100px" alt="accept">
+                                </a>
+                            </div>
+                        </div>
 
+                        <div class="row col-md-offset-2">
+                            <div class="text-left col-md-3 col-xs-6">
+                                <a href="#" target="_blank">
+                                    <img src="img/logo/suitzendburo.jpg" width="200px" height="100px" alt="suitzendburo">
+                                </a>
+                            </div>
+                            <div class="text-left col-md-3 col-xs-6">
+                                <a href="#" target="_blank">
+                                    <img src="img/logo/dps.jpg" width="200px" height="100px"  alt="dps">
+                                </a>
+                            </div>
+                            <div class="text-left col-md-3">
+                                <a href="#" target="_blank">
+                                    <img src="img/logo/wwrecruitment.jpg" width="200px" height="100px" alt="wwrecruitment">
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="row col-md-offset-2">
+                            <div class="text-left col-md-3 col-xs-6">
+                                <a href="#" target="_blank">
+                                    <img src="img/logo/vbmc.png" width="200px" height="100px" alt="vbmc">
+                                </a>
+                            </div>
+                            <div class="text-left col-md-3 col-xs-6">
+                                <a href="#" target="_blank">
+                                    <img src="img/logo/lodge.jpg" width="200px" height="100px" alt="lodge">
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="row col-md-offset-2">
+                            <div class="text-left col-md-3 col-xs-6">
+                                <a href="#" target="_blank">
+                                    <img src="img/logo/trijks.jpg" width="200px" height="100px" alt="trijks">
+                                </a>
+                            </div>
+                            <div class="text-left col-md-3 col-xs-6">
+                                <a href="#" target="_blank">
+                                    <img src="img/logo/topsport.jpg" width="200px" height="100px" alt="topsport">
+                                </a>
+                            </div>
+                            <div class="text-left col-md-3">
+                                <a href="#" target="_blank">
+                                    <img src="img/logo/elst.jpg" width="200px" height="100px" alt="elst">
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="row col-md-offset-2">
+                            <div class="text-left col-md-3 col-xs-6">
+                                <a href="#" target="_blank">
+                                    <img src="img/logo/wokkie.png" width="200px" height="100px" alt="wokkie">
+                                </a>
+                            </div>
+                            <div class="text-left col-md-3 col-xs-6">
+                                <a href="#" target="_blank">
+                                    <img src="img/logo/talentencentrum.jpg" width="200px" height="100px" alt="talentencentrum">
+                                </a>
+                            </div>
+                            <div class="text-left col-md-3">
+                                <a href="#" target="_blank">
+                                    <img src="img/logo/bogers.png" width="200px" height="100px" alt="bogers">
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
