--- a/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
+++ b/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
@@ -26,8 +26,8 @@
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
-       <header>
-        <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+    <header>
+        <nav class="navbar navbar-custom navbar-fixed-top top-nav-collapse" role="navigation">
             <div class="container">
                 <div class="row">
                     
@@ -84,7 +84,7 @@
         <!-- /.container -->
 
 
-        <section id="intro" class="section intro">
+        <section id="intro" class="section intro breedtesport">
             <div class="section-body">
                 <div class="content">
                     <div class="container">
@@ -115,32 +115,27 @@
                     <div class="section-container">
                         <div class="row">
                             <div class="col-lg-8 col-lg-offset-2">
-                                <p class="text-center">
+                                <p>
                                     Ervaren (rugby)trainers, ondersteund door ervaren spelers kunnen indien gewenst activiteiten verzorgen voor een vereniging/organisatie (op locatie), zoals;
                                 </p>
-                                <div class="collapse-group">
-                                    <table class="collapse table">
-                                        <tr>
-                                            <td>Rugbyspecifieke trainingen</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Rugby inzetten als middel om bepaalde doelgroepen een duw in de juiste richting te kunnen geven</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Ondersteuning technisch kader (train de trainer modules) en rugbylessen op school</td>
-                                        </tr>
-                                        <tr>
-                                            <td>U vraagt wij draaien!</td>
-                                        </tr>
-                                    </table>
+                                <table class="table">
+                                    <tr>
+                                        <td>Rugbyspecifieke trainingen</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Rugby inzetten als middel om bepaalde doelgroepen een duw in de juiste richting te kunnen geven</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Ondersteuning technisch kader (train de trainer modules) en rugbylessen op school</td>
+                                    </tr>
+                                    <tr>
+                                        <td>U vraagt wij draaien!</td>
+                                    </tr>
+                                </table>
 
-                                    <p class="collapse text-center">
-                                        Ook kunnen specifieke onderwerpen aan bod komen: u kunt kiezen uit technische onderwerpen, maar ook ondersteuning bij het opzetten van een jeugdopleiding/technischplan behoort tot de mogelijkheden. 
-                                    </p>
-                                    <a class="btn btn-default btn-collapse" href="#">
-                                        <span>Meer info</span>
-                                    </a>
-                                </div>
+                                <p>
+                                    Ook kunnen specifieke onderwerpen aan bod komen: u kunt kiezen uit technische onderwerpen, maar ook ondersteuning bij het opzetten van een jeugdopleiding/technischplan behoort tot de mogelijkheden. 
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -159,18 +154,17 @@
                             <div class="col-lg-2">
                             </div>
                             <div class="col-lg-8">
-                            <p class="text-center">
-                                    Rugby is een geschikte sport om op school te geven. Rugby is een combinatie van snelheid, kracht, techniek en tactiek, maar heeft ook respect hoog in het vaandel staan: deelnemers leren over weerbaarheid, veiligheid, samenwerken en leren respect te hebben voor elkaar. Daarnaast helpt sporten in het algemeen bij de motorische, sociale en cognitieve ontwikkeling van kinderen.
-                                </p>
-                                <div class="collapse-group">
-                                    <p class="collapse text-center">
+                                <div class="col-md-6 kolom">
+                                    <p>
+                                        Rugby is een geschikte sport om op school te geven. Rugby is een combinatie van snelheid, kracht, techniek en tactiek, maar heeft ook respect hoog in het vaandel staan: deelnemers leren over weerbaarheid, veiligheid, samenwerken en leren respect te hebben voor elkaar. Daarnaast helpt sporten in het algemeen bij de motorische, sociale en cognitieve ontwikkeling van kinderen.
+                                    </p>
+                                </div>
+                                <div class="col-md-6 kolom">
+                                    <p>
                                         Jaarlijks ondersteunt ZeBra het Regionaal  Scholen Rugby Toernooi dat plaats bij RC.RCC BEKARO op sportpark Vierhoeven in Roosendaal. Dit toernooi is opgezet voor leerlingen van het voortgezet onderwijs in drie groepen: U 14 gemengd (jongens en meisjes), U16 meisjes en U16 jongens. In aanloop naar het toernooi verzorgt ZeBra in samenwerking met RCC Bekaro voor elke school een aantal clinics. Alle teams komen hierdoor goed voorbereid aan de start.
                                     </p>
-                                    <iframe src="https://www.youtube.com/embed/Cgus55p-1u4" frameborder="0" allowfullscreen class="collapse"></iframe>
-                                    <a class="btn btn-default btn-collapse" href="#">
-                                        <span>lees meer</span>
-                                    </a>
                                 </div>
+                                <iframe src="https://www.youtube.com/embed/Cgus55p-1u4" frameborder="0" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
