--- a/Website/Basis Website [SBR Viewer]/rugbyacademie.html
+++ b/Website/Basis Website [SBR Viewer]/rugbyacademie.html
@@ -27,7 +27,7 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
     <header>
-        <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-custom navbar-fixed-top top-nav-collapse" role="navigation">
             <div class="container">
                 <div class="row">
                     
@@ -99,7 +99,7 @@
         <!-- /.container -->
 
 
-        <section id="intro" class="section intro">
+        <section id="intro" class="section intro academy">
             <div class="section-body">
                 <div class="content">
                     <div class="container">
@@ -120,35 +120,32 @@
     </header>
 
     <main>
-        <section id="over" class="section over">
+        <section id="over" class="section over green">
             <div class="section-body">
                 <div class="content">
                     <div class="section-header">
                         <h2>Studeren en topsport op 't Rijks </h2>
                         <div class="divider-grey"></div>
                     </div>
-                    <div class="section-container">
-                        <div class="vert-center col-lg-8 col-lg-offset-2">
-                            <p class="text-center">
+                    <div class="vert-center col-lg-8 col-lg-offset-2">
+                            <img src="img/logo/ra.jpg" height="100%" width="100%" class="profile" alt="Logo Rugby Academy">
+                        <div class="col-md-6 kolom">
+                            <p>
                                 Wil je goed kunnen studeren voor je latere carrière en ook vaak je favoriete sport rugby beoefenen? Op 't Rijks is dat mogelijk! Wij bieden een opleiding op MAVO-, HAVO- of VWO-niveau en extra trainingen onder schooltijd.
                             </p>
-                            <div class="collapse-group">
-                                <p class="collapse text-center">
-                                    Momenteel zijn er op onze school topsportvriendelijke klassen voor basketbal, tennis, voetbal (meisjes), atletiek en nieuw voor rugby: ‘de Rugby Academy’. Deze klassen zijn wij gestart om talenten te ontwikkelen, zodat zij zich bij het allerhoogste niveau, als Topsport Talent, kunnen aansluiten.
-                                </p>
-                                <p class="collapse text-center">
-                                    Bij deelname aan de Rugby Academy krijg je al meteen een topsport status.
-                                </p>
-                                <p class="collapse text-center">
-                                    Alle trainingen zijn aanvullend op de gewone trainingen die een leerling al bij een sportclub of sportbond volgt. Per week zijn er minimaal twee blokken van twee lesuren training onder schooltijd. De trainingen worden gegeven door bonds-gekwalificeerde trainers in deze sport. Zo willen we je helpen beter te worden in je favoriete sport. Tijdens wedstrijden tegen andere scholen en bij je sportvereniging kun je laten zien wat je geleerd hebt. Wil jij jezelf verder ontwikkelen dan kun je geplaatst worden de Rugby Academy!
-                                </p>
-                                <a class="btn btn-default btn-collapse" href="#">
-                                    Lees meer
-                                </a>
-                            </div>
+                            <p>
+                                Momenteel zijn er op onze school topsportvriendelijke klassen voor basketbal, tennis, voetbal (meisjes), atletiek en nieuw voor rugby: ‘de Rugby Academy’. Deze klassen zijn wij gestart om talenten te ontwikkelen, zodat zij zich bij het allerhoogste niveau, als Topsport Talent, kunnen aansluiten.
+                            </p>
                         </div>
+                        <div class="col-md-6 kolom">
+                            <p>
+                                Bij deelname aan de Rugby Academy krijg je al meteen een topsport status.
+                            </p>
+                            <p>
+                                Alle trainingen zijn aanvullend op de gewone trainingen die een leerling al bij een sportclub of sportbond volgt. Per week zijn er minimaal twee blokken van twee lesuren training onder schooltijd. De trainingen worden gegeven door bonds-gekwalificeerde trainers in deze sport. Zo willen we je helpen beter te worden in je favoriete sport. Tijdens wedstrijden tegen andere scholen en bij je sportvereniging kun je laten zien wat je geleerd hebt. Wil jij jezelf verder ontwikkelen dan kun je geplaatst worden de Rugby Academy!
+                            </p>
+                        </div>                            
                     </div>
-
                 </div>
             </div>
         </section>
@@ -162,10 +159,10 @@
                     </div>
                     <div class="section-container">
                         <div class="vert-center col-lg-8 col-lg-offset-2">
-                            <p class="text-center">
+                            <p>
                                 We verwachten dat je lid bent van een rugbyvereniging. Wij hebben geen voorkeur voor een bepaalde vereniging, maar je moet wel talent hebben. Toelating tot de Topsportvriendelijke klassen gebeurt via selectie. Deze selectie wordt gedaan door de sportbond of gekwalificeerde trainers. Er wordt gekeken of iemand voldoende niveau of mogelijkheden heeft om deze trainingen te volgen. Op de informatieavonden kun je kennismaken met de school in het algemeen. 
                             </p>
-                            <p class="text-center">
+                            <p>
                                 Bij deelname aan dit programma  wordt een eigen bijdrage gevraagd van € 160,- per jaar.
                             </p>
                         </div>
@@ -185,7 +182,7 @@
                     </div>
                     <div class="section-container">
                         <div class="vert-center col-lg-8 col-lg-offset-2">
-                            <p class="text-center">
+                            <p>
                                 LOOT staat voor Landelijke Organisatie Onderwijs en Topsport. Er zijn momenteel een 30-tal Topsport Talentscholen (LOOT-scholen) in Nederland. Deze scholen mogen van het Ministerie van Onderwijs, Cultuur en Wetenschap speciale faciliteiten geven aan leerlingen die talentvol zijn in sport, zodat zij hun studie en sport op een goede manier met elkaar kunnen combineren. Andere scholen mogen dit niet.
                             </p>
                         </div>
@@ -204,7 +201,7 @@
                     </div>
                     <div class="section-container">
                         <div class="vert-center col-lg-8 col-lg-offset-2">
-                            <p class="text-center">
+                            <p>
                                 Er zijn verschillende mogelijkheden. Eén hiervan is vrijstelling van bepaalde uren zodat je dan je huiswerk kunt maken of kunt gaan trainen onder schooltijd. Een andere mogelijkheid is een aangepast rooster om uitgevallen uren, indien nodig weer in te halen. Ook vrijaf voor deelname aan wedstrijden, toernooien en trainingsstages hoort onder voorwaarden tot de mogelijkheden. Het kan zelfs zover gaan dat je vrijstelling van eindexamenvakken krijgt en de mogelijkheid om dit eindexamen te spreiden over twee jaar. Bij problemen zijn er steunlessen voor je en ook de ondersteuning door een LOOT-begeleider hoort er standaard bij. Verder is er een aparte studieruimte met toezicht.
                             </p>
                         </div>
@@ -223,7 +220,7 @@
                     </div>
                     <div class="section-container">
                         <div class="vert-center col-lg-8 col-lg-offset-2">
-                            <p class="text-center">
+                            <p>
                                 Wil je voor LOOT-faciliteiten in aanmerking komen dan dien je een status te hebben. Jouw sportbond bepaalt in samenspraak met het NOC/NSF wie er in jouw sport als talent wordt bestempeld. Deze talenten staan in een grote landelijke database. Als je als Belofte, Nationaal Talent of Internationaal Talent wordt gekwalificeerd dan krijg je op RSG 't Rijks een Topsport Talentstatus met de daarbij behorende faciliteiten.
                             </p>
                         </div>
