--- a/Website/Basis Website [SBR Viewer]/selecties.html
+++ b/Website/Basis Website [SBR Viewer]/selecties.html
@@ -27,7 +27,7 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
     <header>
-        <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-custom navbar-fixed-top top-nav-collapse" role="navigation">
             <div class="container">
                 <div class="row">
                     
@@ -106,7 +106,7 @@
             </div>       
         </nav>
 
-        <section id="intro" class="section intro">
+        <section id="intro" class="section intro selecties">
             <div class="section-body">
                 <div class="content">
                     <div class="container">
@@ -133,6 +133,38 @@
                     <h2>Zebra spelers in oranje</h2>
                     <div class="divider-grey"></div>
                     <div class="col-lg-8 col-lg-offset-2">
+                        <table class="table">
+                            <tr>
+                                <th class="info-green">Naam</th>
+                                <th class="info-green">Vereniging</th>
+                                <th class="info-green">Selectie</th>
+                            </tr>
+                            <tr>
+                                <td>Danen Dirk</td>
+                                <td>RCH</td>
+                                <td>NL A</td>
+                            </tr>
+                            <tr>
+                                <td>Rik Roovers</td>
+                                <td>RCH</td>
+                                <td>NL A</td>
+                            </tr>
+                            <tr>
+                                <td>Yirmibes Yavuz</td>
+                                <td>RCH</td>
+                                <td>NL A</td>
+                            </tr>
+                            <tr>
+                                <td>Bastiaansen Jens</td>
+                                <td>REL</td>
+                                <td>NL U18</td>
+                            </tr>
+                            <tr>
+                                <td>Nielen van Noel</td>
+                                <td>REL</td>
+                                <td>NL U17</td>
+                            </tr>
+                        </table>
                         <p class="text-center">Door middel van de onderstaande knop kunt u het team schema downloaden.</p>
 
                         <a href="#" class="btn btn-primary btn-lg active" role="button" target="blank">Oranjespelers</a>
